fixed hero-img overflow

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ section{
 .hero-img{
     width: 100%;
     height: 200px;
+    max-width: 395px;
 }
 .hero-title{
     font-weight: 600;
